# watch-dog

./: .gitignore  Dockerfile  requirements.txt  run.sh
app/common/: broker.py  context.py
app/common/config/: core.py  detector_pipeline.yaml  detector_pipeline_config.yaml  event_sender_config.yaml  mdl_config.yaml  pipeline_config.txt
app/common/model/: model.py
app/config/: core.py  preprocessor_config.yaml
app/detector/: components.py  main.py  pipeline.py
app/model/: .gitignore  MANIFEST.in  pyproject.toml
app/runtime/: broker.py
app/runtime/detector/: components.py  pipeline.py
app/sender/: components.py
